Cleaned up CSS styling, fixed spacing inconsistencies

--- a/style.css
+++ b/style.css
@@ -28,8 +28,7 @@ body {
     display: grid;
     place-content: center;
 
-    min-width: 400px;
-    min-height: 250px;
+    min-width: 410px;
     padding: 1rem;
 }
 
@@ -42,13 +41,12 @@ main {
 
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
 }
 
 /* Header */
 
 .header-container {
-    margin-bottom: 1rem;
+    margin-bottom: 1.75rem;
 }
 
 .header-title {
@@ -61,19 +59,25 @@ main {
     color: var(--secondary-text);
 }
 
+/* Input / Buttons */
+
+.lead-input,
+.buttons-container button {
+    font-family: "Poppins", sans-serif;
+    font-size: 0.9rem;
+    font-weight: 300;
+}
+
 /* Input */
 
 .lead-input {
     border: 1px solid var(--primary-border);
     border-radius: 1rem;
 
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.75rem;
     padding: 0.375rem 1rem;
 
     color: var(--primary-text);
-    font-family: "Poppins", sans-serif;
-    font-size: 0.9rem;
-    font-weight: 300;
     outline: none;
 
     transition: all 0.3s;
@@ -92,9 +96,6 @@ main {
 
 .buttons-container button {
     cursor: pointer;
-    font-family: "Poppins", sans-serif;
-    font-size: 0.9rem;
-    font-weight: 300;
 
     border-radius: 0.5rem;
 
@@ -140,7 +141,7 @@ main {
 .divider {
     width: 100%;
     height: 1px;
-    margin: 1rem 0;
+    margin: 1.75rem 0;
 
     background-color: var(--primary-border);
 
